correct the border spacing, tooltip finished

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -694,12 +694,18 @@ hot-table {
     border-style: solid;
     border-width: 1px;
     border-color: #aaa;
+    border-spacing: 0px;
     tbody{
       tr{
+        td {
+          padding: 5px;
+          border-top: 1px solid #ccc;
+        }
         .dashed {
           border-left-style: dashed;
           border-left-width: 1px;
           border-left-color: #999;
+          text-align: right;
         }
       }
       #title-row{
